# safepyrun

./: CHANGELOG.md  README.md  cli.html  cli.html.md  core.html  core.html.md  index.html  index.html.md  noaudit.html  noaudit.html.md  pyproject.toml  robots.txt  safer.html  safer.html.md  search.json  sitemap.xml
nbs/: 00_core.ipynb  01_audit.ipynb  01_cli.ipynb  02_safer.ipynb  03_noaudit.ipynb  index.ipynb  nbdev.yml
safepyrun/: __init__.py  _modidx.py  audit.py  cli.py  core.py  noaudit.py  safer.py  skill.py
