[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "safepyrun"
dynamic = ["version"]
description = "Safe(ish) running of python code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "fastaudit>=0.2.1",
  "pyskills>=0.0.17",
  "fastcore>=1.12.27",
  "httpx",
  "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = ['numpy', 'matplotlib', 'ipykernel_helper>=0.0.58']

[project.urls]
Repository = "https://github.com/AnswerDotAI/safepyrun"
Documentation = "https://AnswerDotAI.github.io/safepyrun/"

[project.entry-points.nbdev]
safepyrun = "safepyrun._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "safepyrun.__version__"}

[tool.setuptools.packages.find]
include = ["safepyrun"]

[project.scripts]
safepyrun = "safepyrun.core:cli"

[tool.nbdev]
allowed_metadata_keys = ['solveit']
allowed_cell_metadata_keys = ['solveit_ai']

[tool.chkstyle]
skip_paths = ["_modidx.py"]
